# aoc2023

./: .gitignore  Cargo.toml  aoc2023.cabal  flake.nix
src/day01a/: Main.hs  main.rs
src/day01b/: Main.hs  main.rs
src/day02/: Main.hs  main.rs
src/day02a/: Main.hs  main.rs
src/day03/: Main.hs  coord.rs  dim.rs  image.rs  main.rs  span.rs
src/day04/: Main.hs  main.rs
src/day05/: main.rs
