[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "day01a"
path = "src/day01a/main.rs"

[[bin]]
name = "day01b"
path = "src/day01b/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[[bin]]
name = "day04"
path = "src/day04/main.rs"

[[bin]]
name = "day05"
path = "src/day05/main.rs"

[dependencies]
ariadne = "0.3.0"
chumsky = "0.9.3"
nom = "7.1.3"
